--- a/nubot.cabal
+++ b/nubot.cabal
@@ -47,11 +47,9 @@ library
   hs-source-dirs:
       src
   build-depends:
-      QuickCheck
-    , aeson
+      aeson
     , base >=4.7 && <5
     , bytestring
-    , hspec
     , lens
     , random
     , serialise
@@ -71,11 +69,9 @@ executable nubot-exe
       app
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
-      QuickCheck
-    , aeson
+      aeson
     , base >=4.7 && <5
     , bytestring
-    , hspec
     , lens
     , nubot
     , random
@@ -97,11 +93,9 @@ test-suite nubot-test
       test
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
-      QuickCheck
-    , aeson
+      aeson
     , base >=4.7 && <5
     , bytestring
-    , hspec
     , lens
     , nubot
     , random
