--- a/stack.yaml
+++ b/stack.yaml
@@ -1,5 +1,5 @@
-resolver:
-  url: https://mirrors.tuna.tsinghua.edu.cn/stackage/stackage-snapshots/lts/18/12.yaml
+resolver: lts-18.12
+# url: https://mirrors.tuna.tsinghua.edu.cn/stackage/stackage-snapshots/lts/18/12.yaml
 
 
 packages:
