feat(Group): websearch from group

--- a/nubot.cabal
+++ b/nubot.cabal
@@ -1,17 +1,17 @@
 cabal-version: 1.12
 
--- This file has been generated from package.yaml by hpack version 0.34.4.
+-- This file has been generated from package.yaml by hpack version 0.34.5.
 --
 -- see: https://github.com/sol/hpack
 
 name:           nubot
 version:        0.1.0.0
-description:    Please see the README on GitHub at <https://github.com/githubuser/nubot#readme>
-homepage:       https://github.com/githubuser/nubot#readme
-bug-reports:    https://github.com/githubuser/nubot/issues
-author:         Author name here
-maintainer:     example@example.com
-copyright:      2021 Author name here
+description:    Please see the README on GitHub at <https://github.com/nutr1t07/nubot#readme>
+homepage:       https://github.com/nutr1t07/nubot#readme
+bug-reports:    https://github.com/nutr1t07/nubot/issues
+author:         Nutr1t07
+maintainer:     nutr1t07@outlook.com
+copyright:      2021 Nutr1t07
 license:        BSD3
 license-file:   LICENSE
 build-type:     Simple
@@ -21,7 +21,7 @@ extra-source-files:
 
 source-repository head
   type: git
-  location: https://github.com/githubuser/nubot
+  location: https://github.com/nutr1t07/nubot
 
 library
   exposed-modules:
@@ -60,6 +60,7 @@ library
     , bytestring
     , lens
     , mime-mail
+    , network-uri
     , random
     , serialise
     , smtp-mail
@@ -67,7 +68,6 @@ library
     , stringsearch
     , text
     , time
-    , uri-encode
     , utf8-string
     , websockets
     , wreq
@@ -84,6 +84,7 @@ executable nubot-exe
     , bytestring
     , lens
     , mime-mail
+    , network-uri
     , nubot
     , random
     , serialise
@@ -92,7 +93,6 @@ executable nubot-exe
     , stringsearch
     , text
     , time
-    , uri-encode
     , utf8-string
     , websockets
     , wreq
@@ -110,6 +110,7 @@ test-suite nubot-test
     , bytestring
     , lens
     , mime-mail
+    , network-uri
     , nubot
     , random
     , serialise
@@ -118,7 +119,6 @@ test-suite nubot-test
     , stringsearch
     , text
     , time
-    , uri-encode
     , utf8-string
     , websockets
     , wreq
