--- a/stack.yaml
+++ b/stack.yaml
@@ -1,10 +1,9 @@
-resolver: lts-18.12
-# url: https://mirrors.tuna.tsinghua.edu.cn/stackage/stackage-snapshots/lts/18/12.yaml
-
+resolver: lts-18.18
 
 packages:
 - .
-# extra-deps:
+extra-deps:
+
 
 
 nix:
