--- a/package.yaml
+++ b/package.yaml
@@ -57,7 +57,7 @@ executables:
     - nubot
     when:
     - condition: false
-      # other-modules: Paths_nubot
+      other-modules: Paths_nubot
 
 tests:
   nubot-test:
@@ -71,4 +71,4 @@ tests:
     - nubot
     when:
     - condition: false
-      # other-modules: Paths_nubot
+      other-modules: Paths_nubot
